fix Gradle multi-stage build